added a console and made some event handlers for it

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,8 @@
 </header>
 
 <main>
-    <% include ../partials/texteditor %>
+	<textarea class="codemirror-textarea" id="codeEditor"></textarea>
+	<textarea class="codemirror-textarea" id="console"></textarea>	
 </main>
 
 <footer>
