--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,15 @@
             </a>
         <ul class="nav navbar-nav">
             <li>
-                <a class="navbar-brand" id="compile" href="#">
+                <a class="navbar-brand" id="navCompile" href="#">
                     <span class="glyphicon glyphicon-play"></span>
-                    Run
+                    Compile
+                </a>
+            </li>
+            <li>
+                <a class="navbar-brand" id="navConsole" href="#">
+                    <span class="glyphicon glyphicon-console"></span>
+                    Console
                 </a>
             </li>
         </ul>
