--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,10 +7,12 @@
 <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="plugin/codemirror/lib/
-codemirror.css"></script>
-
+codemirror.css">
+<link rel="stylesheet" type="text/css" href="plugin/codemirror/theme/abcdef.css">
+<link rel="stylesheet" type="text/css" href="plugin/codemirror/theme/blackboard.css">
+<link rel="stylesheet" type="text/css" href="plugin/codemirror/theme/neat.css">
 <!-- javascript --> 
 <script type ="text/javascript" src ="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script type="text/javascript" src="plugin/codemirror/lib/codemirror.js"></script>
-<script type="text/javascript" src="js/ajax-requests.js"></script>
+<script type="text/javascript" src="js/compiler.js"></script>
