--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,12 @@
 */
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
-
+html, body{
+	height: 100%;
+}
 body {
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    background: #f7f7f7;
 }
 
 p {
@@ -23,13 +25,56 @@ a, a:hover, a:focus {
     transition: all 0.3s;
 }
 
+.CodeMirror{
+	position: relative;
+    overflow: hidden;
+    background: white;
+    height: 50%;
+}
 .navbar {
-    padding: 15px 10px;
-    background: #fff;
+    padding: 10px 10px;
+    background: #6d7fcc;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-nav{
+	float: left;
+    margin: 0;
+    color:white;
+}
+/*************************************
+* 		myNavbar styles
+*************************************/
+#myNavbar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#myNavbar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#myNavbar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#myNavbar ul li.active > a, a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+#sidebarExpand {
+	float:left;
+	padding-right: 50px
+}
+
+#sidebarCollapse {
+	font-size: 1.1em;
 }
 
 .navbar-btn {
@@ -43,6 +88,26 @@ a, a:hover, a:focus {
     height: 1px;
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
+}
+
+.kitchen-sink-drawer {
+    background: #f7f7f7;
+	padding-top: 35px;
+	padding-left: 30px;
+	height: 38%; 
+}
+
+.consoleArea {
+	border-left: 1px solid #ddd;
+	border-top: 1px solid #ddd;
+	color: black;
+    background: #fff;
+    padding-top: 10px;
+    padding-left: 10px;
+    height: 100%;
+    font-family: monospace;
+    font-size: 1.1em;
+    overflow-y:auto
 }
 
 /* ---------------------------------------------------
@@ -89,11 +154,10 @@ a, a:hover, a:focus {
     background: #fff;
 }
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+.nav>li>a:focus, .nav>li>a:hover {
+	color: #fff;
+	background: #6d7fcc;
 }
-
 
 a[data-toggle="collapse"] {
     position: relative;
@@ -144,12 +208,13 @@ a.article, a.article:hover {
 ----------------------------------------------------- */
 #content {
     width: calc(100% - 250px);
-    padding: 40px;
+    padding: 0;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
     top: 0;
     right: 0;
+    height:100%;
 }
 #content.active {
     width: 100%;
