--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,25 +1,28 @@
 <!-- views/partials/header.ejs -->
 
-<div class="navbar navbar-default" role="navigation">
+<div class="navbar sticky-top" role="navigation" id="myNavbar">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-                <i class="glyphicon glyphicon glyphicon-file"></i>
-                File
-            </button>
-        </div>
         <ul class="nav navbar-nav">
+            <div id="sidebarExpand" style="display:none" class="navbar-header">
+                <li>
+                    <a href="#" id="">
+                        <i class="glyphicon glyphicon-menu-right"></i> 
+                    </a>
+                </li>
+            </div>
+        </ul>
+        <ul class="nav navbar-nav navbar-left">
             <li>
-                <button type="button" id="navCompile" class="btn btn-info navbar-btn">
-                <i class="glyphicon glyphicon-play"></i>
-                    Compile
-                </button>
-            </li>
-            <li>
-                <button type="button" id="navConsole" class="btn btn-info navbar-btn">
+                <a href="#" id="consoleToggle" class="navbar-toggler">
                 <i class="glyphicon glyphicon-console"></i>
                     Console
-                </button>
+                </a>
+            </li>
+            <li>
+                <a href="#" id="navCompile">
+                <i class="glyphicon glyphicon-play"></i>
+                    Compile
+                </a>
             </li>
         </ul>
     </div>
