--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -24,6 +24,8 @@ codemirror.css">
 <!-- javascript --> 
 <script type="text/javascript" src="plugin/codemirror/lib/codemirror.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 <!-- Custom Scroller Js CDN -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
