--- a/views/partials/consoleDiv.ejs
+++ b/views/partials/consoleDiv.ejs
@@ -1,4 +1,4 @@
-<div id="consoleDrawer" class="bmd-layout-drawer kitchen-sink-drawer">
+<div id="consoleDrawer" class="bmd-layout-drawer kitchen-sink-drawer active">
   <div class="consoleArea"> 
     <div id="consoleContent">
     </div>
