--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -23,6 +23,7 @@ codemirror.css">
 
 <!-- javascript --> 
 <script type="text/javascript" src="plugin/codemirror/lib/codemirror.js"></script>
+<script type="text/javascript" src="plugin/codemirror/mode/javascript/javascript.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
