--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -33,11 +33,11 @@
 		<li class="active"> <!-- link with dropdown items -->
 			<a href="#lexerPrograms" data-toggle="collapse" aria-expanded="false">Lexer Programs</a>
 			<ul class="collapse list-unstyled" id="lexerPrograms">
-				<li><a href="#">lexer 1</a></li>
-				<li><a href="#">lexer 2</a></li>
-				<li><a href="#">lexer 3</a></li>
-				<li><a href="#">lexer 4</a></li>
-				<li><a href="#">lexer 5</a></li>
+				<li><a href="javascript:loadEditor(1)">Pretty Code</a></li>
+				<li><a href="javascript:loadEditor(2)">Comments</a></li>
+				<li><a href="javascript:loadEditor(3)">Strings</a></li>
+				<li><a href="javascript:loadEditor(4)">Interesting</a></li>
+				<li><a href="javascript:loadEditor(5)">Nightmare</a></li>
 			</ul>
 		</li>
 		<li> <!-- link with dropdown items -->
