--- a/views/partials/consoleDiv.ejs
+++ b/views/partials/consoleDiv.ejs
@@ -1,11 +1,11 @@
 <div id="consoleDrawer" class="bmd-layout-drawer kitchen-sink-drawer active">
   <div class="consoleArea"> 
     <div id="consoleContent">
-    	<div id="consoleInfo" class="alert alert-info">
+    	<div id="consoleInfo">
     	</div>
-    	<div id="consoleErrors" class="alert alert-danger">
+    	<div id="consoleErrors">
     	</div>
-    	<div id="consoleWarnings" class="alert alert-warning">
+    	<div id="consoleWarnings">
     	</div>
     </div>
   </div>
