added parser test cases, can now parse multiple programs

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -56,11 +56,11 @@
 		<li> <!-- link with dropdown items -->
 			<a href="#parserPrograms" data-toggle="collapse" aria-expanded="false">Parser Programs</a>
 			<ul class="collapse list-unstyled" id="parserPrograms">
-				<li><a href="#">parser 1</a></li>
-				<li><a href="#">parser 2</a></li>
-				<li><a href="#">parser 3</a></li>
-				<li><a href="#">parser 4</a></li>
-				<li><a href="#">parser 5</a></li>
+				<li><a href="javascript:loadEditor(6)">Intro to Smart Hints</a></li>
+				<li><a href="javascript:loadEditor(7)">Parsing multiple simple programs</a></li>
+				<li><a href="javascript:loadEditor(8)">Interesting Parses</a></li>
+				<li><a href="javascript:loadEditor(9)">Varible Declarations</a></li>
+				<li><a href="javascript:loadEditor(10)">Blocks Within Blocks</a></li>
 			</ul>
 		</li>
 		<li> <!-- link with dropdown items -->
