--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -57,7 +57,7 @@
 			<a href="#parserPrograms" data-toggle="collapse" aria-expanded="false">Parser Programs</a>
 			<ul class="collapse list-unstyled" id="parserPrograms">
 				<li><a href="javascript:loadEditor(6)">Intro to Smart Hints</a></li>
-				<li><a href="javascript:loadEditor(7)">Parsing multiple simple programs</a></li>
+				<li><a href="javascript:loadEditor(7)">Making a Statement!</a></li>
 				<li><a href="javascript:loadEditor(8)">Interesting Parses</a></li>
 				<li><a href="javascript:loadEditor(9)">Varible Declarations</a></li>
 				<li><a href="javascript:loadEditor(10)">Blocks Within Blocks</a></li>
