added ast functionality. still need to get adding and strings into the ast correctly.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,7 @@ a, a:hover, a:focus {
     overflow: hidden;
     background: white;
     height: 30%;
-    padding-right: 5px;
+    margin-right: 15px;
 }
 
 /** 
