offically ready to start codegen with less then 2 weeks left :]

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -66,11 +66,11 @@
 		<li> <!-- link with dropdown items -->
 			<a href="#astPrograms" data-toggle="collapse" aria-expanded="false">AST Programs</a>
 			<ul class="collapse list-unstyled" id="astPrograms">
-				<li><a href="#">ast 1</a></li>
-				<li><a href="#">ast 2</a></li>
-				<li><a href="#">ast 3</a></li>
-				<li><a href="#">ast 4</a></li>
-				<li><a href="#">ast 5</a></li>
+				<li><a href="javascript:loadEditor(11)">Scope Checking Variables</a></li>
+				<li><a href="javascript:loadEditor(12)">Declared, Uninitalized and Unused</a></li>
+				<li><a href="javascript:loadEditor(13)">Declared, Initalized and Unused</a></li>
+				<li><a href="javascript:loadEditor(14)">Declared, Uninitalized and Used</a></li>
+				<li><a href="javascript:loadEditor(15)">James Bond</a></li>
 			</ul>
 		</li>
 		<li> <!-- link with dropdown items -->
