changed the main controllers name from compiler-controller -> page-controller (since it was confusing having 2 compiler controllers, 1 on front end and another on back end).. made the machine code output pretty in the GUI

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -33,4 +33,4 @@ codemirror.css">
 <!-- my javascript -->
 <script type="text/javascript" src="js/ajax-requests.js"></script>
 <script type="text/javascript" src="js/lexer.js"></script>
-<script type="text/javascript" src="js/compiler-controller.js"></script>
+<script type="text/javascript" src="js/page-controller.js"></script>
