oops, forgot to make a last commit. commiting everything now to fix alans problems

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -76,11 +76,12 @@
 		<li> <!-- link with dropdown items -->
 			<a href="#codegenPrograms" data-toggle="collapse" aria-expanded="false">Codegen Programs</a>
 			<ul class="collapse list-unstyled" id="codegenPrograms">
-				<li><a href="#">codegen 1</a></li>
-				<li><a href="#">codegen 2</a></li>
-				<li><a href="#">codegen 3</a></li>
-				<li><a href="#">codegen 4</a></li>
-				<li><a href="#">codegen 5</a></li>
+				<li><a href="javascript:loadEditor(16)">Ints</a></li>
+				<li><a href="javascript:loadEditor(17)">Strings</a></li>
+				<li><a href="javascript:loadEditor(18)">Bools</a></li>
+				<li><a href="javascript:loadEditor(19)">If Statements</a></li>
+				<li><a href="javascript:loadEditor(20)">While Statements</a></li>
+				<li><a href="javascript:loadEditor(21)">Bringing it all together</a></li>
 			</ul>
 		</li>
 	</ul>
